--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
+
 <body>
     <div id="nav">
         <h3><b>CYBER</b>FICTION*</h3>
-        <a class="nav-github" href="https://github.com/Armankabirr" target="_blank" rel="noopener" aria-label="My github">
+        <a class="nav-github" href="https://github.com/Armankabirr" target="_blank" rel="noopener"
+            aria-label="My github">
             <svg viewBox="0 0 24 24" role="img" aria-hidden="true" focusable="false">
-                <path d="M12 2c-5.52 0-10 4.48-10 10 0 4.41 2.87 8.15 6.84 9.48.5.09.68-.22.68-.49 0-.24-.01-.87-.01-1.71-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.45-1.11-1.45-.91-.62.07-.61.07-.61 1 .07 1.53 1.03 1.53 1.03.9 1.54 2.36 1.1 2.94.84.09-.65.35-1.1.64-1.36-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02a9.6 9.6 0 0 1 2.5-.34c.85 0 1.71.11 2.5.34 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.69.92.69 1.86 0 1.34-.01 2.42-.01 2.75 0 .27.18.59.69.49A10.01 10.01 0 0 0 22 12c0-5.52-4.48-10-10-10z" />
+                <path
+                    d="M12 2c-5.52 0-10 4.48-10 10 0 4.41 2.87 8.15 6.84 9.48.5.09.68-.22.68-.49 0-.24-.01-.87-.01-1.71-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.45-1.11-1.45-.91-.62.07-.61.07-.61 1 .07 1.53 1.03 1.53 1.03.9 1.54 2.36 1.1 2.94.84.09-.65.35-1.1.64-1.36-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02a9.6 9.6 0 0 1 2.5-.34c.85 0 1.71.11 2.5.34 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.69.92.69 1.86 0 1.34-.01 2.42-.01 2.75 0 .27.18.59.69.49A10.01 10.01 0 0 0 22 12c0-5.52-4.48-10-10-10z" />
             </svg>
             <span>My github</span>
         </a>
@@ -21,11 +25,15 @@
     <div id="main">
         <div id="page">
             <div id="loop">
-                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
-                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
-                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE <span><i>METAVERSE.</i></span></h1>
+                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE
+                    <span><i>METAVERSE.</i></span></h1>
+                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE
+                    <span><i>METAVERSE.</i></span></h1>
+                <h1><b>CYBER</b>FICTION IS THE <b><i>REAL</i></b> <span>STORY</span> IN THE
+                    <span><i>METAVERSE.</i></span></h1>
             </div>
-            <h3>CYBERFICTION AIMS TO BE A DECENTRALIZED COMMUNITY THAT CAN <br> CREATE NEW VALUES AND PROFITS THROUGH PLAY IN THE VIRTUAL <br> WORLD.</h3>
+            <h3>A PROJECT MADE BY ME TO PRACTICE AND LEARN NEW THINGS <br>I EXPLORED ADVANCED SCROLL ANIMATIONS AND
+                CANVAS RENDERING TECHNIQUES <br>USING MODERN FRONT-END TOOLS.</h3>
             <h4>...SCROLL TO READ</h4>
             <canvas></canvas>
         </div>
@@ -36,15 +44,17 @@
                     <br>
                     LET'S PLAY
                     <br>
-                    JUST BE TOGETHER</h1>
+                    JUST BE TOGETHER
+                </h1>
             </div>
             <div id="left-text">
                 <h1>MAKE A STORY
                     <br>
                     TAKE A CHANCE
                     <br>
-                    BUILD AND OWNED</h1>
-                    <h3>..AND MAINTAIN GOOD HUMANITY</h3>
+                    BUILD AND OWNED
+                </h1>
+                <h3>..AND MAINTAIN GOOD HUMANITY</h3>
             </div>
         </div>
         <div id="page2">
@@ -54,10 +64,12 @@
                     <br>
                     HAVE FUN
                     <br>
-                    TOGETHER</h1>
+                    TOGETHER
+                </h1>
             </div>
             <div id="text2">
-                <p>LET'S HAVE A BLAST! LET'S JUST THROW AWAY AGE, GENDER, REGION, <br> STATUS, ETC., DON'T COMPETE, DON'T FIGHT, COOPERATE AND SHARE <br> WITH EACH OTHER AND ENJOY IT TOGETHER! SO THAT YOU CAN STAND <br> THERE IN THE NOT-TOO-DISTANT FUTURE AND DREAM OF ANOTHER NEW <br> FUTURE</p>
+                <p>THIS PROJECT IS A SIMULATION OF MOTION-DRIVEN<br>STORYTELLING.BY SYNCHRONIZING SCROLL MOVEMENT WITH CANVAS<br>FRAME ANIMATION WITH EACH OTHER AND ENJOY IT TOGETHER! <br>SO THAT YOU CAN STAND
+                    , I EXPLORED HOW FUTURISTIC<br>INTERFACES CREATE IMMERSIVE USER EXPERIENCES<br>IN MODERN WEB ECOSYSTEMS.</p>
             </div>
         </div>
         <div id="page3">
@@ -65,19 +77,24 @@
                 <h3>CYBERFICTION / PLAYGROUND</h3>
                 <h1>
 
-CYBERFIELD
-<br>
-IS OUR
-<br>
-PLAYGROUND
+                    CYBERFIELD
+                    <br>
+                    IS OUR
+                    <br>
+                    PLAYGROUND
                 </h1>
-               
+
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js" integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"
+        integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"
+        integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
